# Polymorphism-Demo

./: BadNPC.cpp  BadNPC.h  CMakeLists.txt  ControllablePlayer.cpp  ControllablePlayer.h  DestructableWall.cpp  DestructableWall.h  GameObject.cpp  GameObject.h  Main.cpp  NPC.h  Player.h  README.md  Wall.h
